Update dependency Fulcrum testcontainer to v2.0.1-SNAPSHOT; allow (lightweight) container by default not only for test, exposing DefaultContainerSetup, ContainerImpl and Contaier interface